pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-backend-svc
  namespace: exercises
spec:
  type: LoadBalancer
  selector:
    app: pingpong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
